--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "clone": "^2.1.2",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "sha256": "^0.2.0",
-    "web-vitals": "^1.1.2",
-    "crypto-js": "4.0.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
