--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "crypto-js": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "^4.0.3",
     "sha256": "^0.2.0",
+    "throw": "^1.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
